Bug fixes and updates

--- a/resources/public/css/themes/lumen/bootstrap.css
+++ b/resources/public/css/themes/lumen/bootstrap.css
@@ -4409,7 +4409,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   color: #555555;
 }
 .navbar-default .navbar-nav > li > a {
-  color: #999999;
+  color: #ffffff;
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
