--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -43,10 +43,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/projects"><b>[C]</b> Centipair</a><br/>
-	  
-        </div>
+          <a class="navbar-brand" href="/"><b>[C]</b> Centipair</a>
+	</div>
+	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	  <ul class="nav navbar-nav">
+	    <li><a href="/register">Register</a></li>
+	    <li><a href="/login">Login</a></li>
+	  </ul>
+	</div>
       </div>
+      
     </div>
     <div id="notifier"></div>
     <div class="container">
