--- a/resources/templates/projects-home.html
+++ b/resources/templates/projects-home.html
@@ -5,141 +5,24 @@ IT Services & Consulting | Enterprise Solutions | Mobile Devlopment | Outsourcin
 {% block content %}
 
 <div class="row">
-  <div class="col-md-2">
-    <div id="side-menu">
-    
-    </div>
-  </div>
-  <div class="col-md-8">
+  
+  <div class="col-md-9">
     <div id="search-bar">
    
     </div>
+    <div class="row">
+      <div class="col-md-7"><b>Title</b></div>
+      <div class="col-md-2"><b>Location</b></div>
+      <div class="col-md-2"><b>Job Type</b></div>
+      <div class="col-md-1"><b>Budget</b></div>
+    </div>
     <div class="row job-list">
-      <div class="col-md-8">Senior/Principal <a href="#">Software Development Engineer</a> at Looking glass Cyber Solutions</div>
-      <div class="col-md-2" >25000</div>
+      <div class="col-md-7">Senior/Principal <a href="#">Software Development Engineer</a> at Looking glass Cyber Solutions</div>
+      <div class="col-md-2" >New york</div>
       <div class="col-md-2" >Full time</div>
+      <div class="col-md-1" >$25000</div>
     </div>
-     <div class="row job-list">
-      <div class="col-md-8">Tactical Software Engineer at Novus</div>
-      <div class="col-md-2" >21000</div>
-      <div class="col-md-2" >20 hours</div>
-    </div>
-     <div class="row job-list">
-       <div class="col-md-8">Haskell Web Engineer at Front Row Education</div>
-       <div class="col-md-2" >45000</div>
-       <div class="col-md-2" >Part time</div>
-     </div>
-     <div class="row job-list">
-       <div class="col-md-8">Need developer for online shopping website zaptok.com</div>
-       <div class="col-md-2" >25000</div>
-       <div class="col-md-2" >Permanent</div>
-     </div>
-     <div class="row job-list">
-       <div class="col-md-8">Senior/Principal <a href="#">Software Development Engineer</a> at Looking glass Cyber Solutions</div>
-       <div class="col-md-2">25000</div>
-       <div class="col-md-2">Contractor</div>
-     </div>
-     <div class="row job-list">
-      <div class="col-md-8">Senior/Principal <a href="#">Software Development Engineer</a> at Looking glass Cyber Solutions</div>
-      <div class="col-md-2" >25000</div>
-      <div class="col-md-2" >Full time</div>
-    </div>
-     <div class="row job-list">
-      <div class="col-md-8">Tactical Software Engineer at Novus</div>
-      <div class="col-md-2" >21000</div>
-      <div class="col-md-2" >20 hours</div>
-    </div>
-     <div class="row job-list">
-       <div class="col-md-8">Haskell Web Engineer at Front Row Education</div>
-       <div class="col-md-2" >45000</div>
-       <div class="col-md-2" >Part time</div>
-     </div>
-     <div class="row job-list">
-       <div class="col-md-8">Need developer for online shopping website zaptok.com</div>
-       <div class="col-md-2" >25000</div>
-       <div class="col-md-2" >Permanent</div>
-     </div>
-     <div class="row job-list">
-       <div class="col-md-8">Senior/Principal <a href="#">Software Development Engineer</a> at Looking glass Cyber Solutions</div>
-       <div class="col-md-2">25000</div>
-       <div class="col-md-2">Contractor</div>
-     </div>
-     <div class="row job-list">
-      <div class="col-md-8">Senior/Principal <a href="#">Software Development Engineer</a> at Looking glass Cyber Solutions</div>
-      <div class="col-md-2" >25000</div>
-      <div class="col-md-2" >Full time</div>
-    </div>
-     <div class="row job-list">
-      <div class="col-md-8">Tactical Software Engineer at Novus</div>
-      <div class="col-md-2" >21000</div>
-      <div class="col-md-2" >20 hours</div>
-    </div>
-     <div class="row job-list">
-       <div class="col-md-8">Haskell Web Engineer at Front Row Education</div>
-       <div class="col-md-2" >45000</div>
-       <div class="col-md-2" >Part time</div>
-     </div>
-     <div class="row job-list">
-       <div class="col-md-8">Need developer for online shopping website zaptok.com</div>
-       <div class="col-md-2" >25000</div>
-       <div class="col-md-2" >Permanent</div>
-     </div>
-     <div class="row job-list">
-       <div class="col-md-8">Senior/Principal <a href="#">Software Development Engineer</a> at Looking glass Cyber Solutions</div>
-       <div class="col-md-2">25000</div>
-       <div class="col-md-2">Contractor</div>
-     </div>
-     <div class="row job-list">
-      <div class="col-md-8">Senior/Principal <a href="#">Software Development Engineer</a> at Looking glass Cyber Solutions</div>
-      <div class="col-md-2" >25000</div>
-      <div class="col-md-2" >Full time</div>
-    </div>
-     <div class="row job-list">
-      <div class="col-md-8">Tactical Software Engineer at Novus</div>
-      <div class="col-md-2" >21000</div>
-      <div class="col-md-2" >20 hours</div>
-    </div>
-     <div class="row job-list">
-       <div class="col-md-8">Haskell Web Engineer at Front Row Education</div>
-       <div class="col-md-2" >45000</div>
-       <div class="col-md-2" >Part time</div>
-     </div>
-     <div class="row job-list">
-       <div class="col-md-8">Need developer for online shopping website zaptok.com</div>
-       <div class="col-md-2" >25000</div>
-       <div class="col-md-2" >Permanent</div>
-     </div>
-     <div class="row job-list">
-       <div class="col-md-8">Senior/Principal <a href="#">Software Development Engineer</a> at Looking glass Cyber Solutions</div>
-       <div class="col-md-2">25000</div>
-       <div class="col-md-2">Contractor</div>
-     </div>
-     <div class="row job-list">
-      <div class="col-md-8">Senior/Principal <a href="#">Software Development Engineer</a> at Looking glass Cyber Solutions</div>
-      <div class="col-md-2" >25000</div>
-      <div class="col-md-2" >Full time</div>
-    </div>
-     <div class="row job-list">
-      <div class="col-md-8">Tactical Software Engineer at Novus</div>
-      <div class="col-md-2" >21000</div>
-      <div class="col-md-2" >20 hours</div>
-    </div>
-     <div class="row job-list">
-       <div class="col-md-8">Haskell Web Engineer at Front Row Education</div>
-       <div class="col-md-2" >45000</div>
-       <div class="col-md-2" >Part time</div>
-     </div>
-     <div class="row job-list">
-       <div class="col-md-8">Need developer for online shopping website zaptok.com</div>
-       <div class="col-md-2" >25000</div>
-       <div class="col-md-2" >Permanent</div>
-     </div>
-     <div class="row job-list">
-       <div class="col-md-8">Senior/Principal <a href="#">Software Development Engineer</a> at Looking glass Cyber Solutions</div>
-       <div class="col-md-2">25000</div>
-       <div class="col-md-2">Contractor</div>
-     </div>
-     
+          
   </div>
   <div class="col-md-2">
     <a href="/join" class="btn btn-primary btn-lg btn-block">
