Updated public api UI

--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -64,7 +64,7 @@
     
     <div class="container">
       <hr>
-      <p class="centered">Centipair Technologies Private Limited - 2015</p>
+      <p class="text-center"><b>Centipair Technologies Private Limited - 2015</b></p>
       <hr>
       
     </div><!-- /container -->
