--- a/resources/templates/projects-home.html
+++ b/resources/templates/projects-home.html
@@ -8,21 +8,16 @@ IT Services & Consulting | Enterprise Solutions | Mobile Devlopment | Outsourcin
   
   <div class="col-md-9">
     <div id="search-bar">
-   
+      
     </div>
-    <div class="row">
-      <div class="col-md-7"><b>Title</b></div>
-      <div class="col-md-2"><b>Location</b></div>
-      <div class="col-md-2"><b>Job Type</b></div>
-      <div class="col-md-1"><b>Budget</b></div>
-    </div>
-    <div class="row job-list">
-      <div class="col-md-7">Senior/Principal <a href="#">Software Development Engineer</a> at Looking glass Cyber Solutions</div>
-      <div class="col-md-2" >New york</div>
-      <div class="col-md-2" >Full time</div>
-      <div class="col-md-1" >$25000</div>
-    </div>
-          
+    <div id="job-list">
+      <!--<div class="row job-list">
+	<div class="col-md-7">Senior/Principal <a href="#">Software Development Engineer</a> at Looking glass Cyber Solutions</div>
+	<div class="col-md-2" >New york</div>
+	<div class="col-md-2" >Full time</div>
+	<div class="col-md-1" >$25000</div>
+      </div>-->
+    </div> 
   </div>
   <div class="col-md-2">
     <a href="/join" class="btn btn-primary btn-lg btn-block">
